[package]
name = "count-min-common"
version = "0.1.0"
edition = "2021"

[features]
default = []
user = ["aya"]

[dependencies]
aya = { git = "https://github.com/aya-rs/aya", optional = true }
# aya = { git = "https://github.com/VladimiroPaschali/aya.git", optional = true }
#aya = { git = "https://github.com/dave-tucker/aya.git", branch = "hashofhashmaps", optional = true }


[lib]
path = "src/lib.rs"
